--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.44.0",
     "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-parallax-scroll-view": "^0.19.0",
+    "react-native-picker": "^4.0.18",
     "react-native-popover": "github:jeanregisser/react-native-popover#8a443d2699b404d55c324edc8536255150340789",
     "react-native-scrollable-tab-view": "^0.6.6",
     "react-native-tab-navigator": "^0.3.3",
