--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
+    "react-native-actionsheet": "^2.1.0",
+    "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker": "^4.0.18",
