--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-actionsheet": "^2.1.0",
-    "react-native-datepicker": "^1.5.1",
     "react-native-camera": "^0.9.0",
+    "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-image-picker": "^0.26.3",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker": "^4.0.18",
     "react-native-popover": "github:jeanregisser/react-native-popover#8a443d2699b404d55c324edc8536255150340789",
