--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-actionsheet": "^2.1.0",
+    "react-native-baidu-map": "^0.6.0",
     "react-native-camera": "^0.9.0",
     "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
