--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-actionsheet": "^2.1.0",
@@ -20,7 +21,9 @@
     "react-native-popover": "github:jeanregisser/react-native-popover#8a443d2699b404d55c324edc8536255150340789",
     "react-native-scrollable-tab-view": "^0.6.6",
     "react-native-sensitive-info": "^5.1.0",
+    "react-native-shadow": "^1.1.2",
     "react-native-simple-markdown": "^1.0.60-rc.3",
+    "react-native-svg": "^5.1.8",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.1.1",
     "react-native-viewpager": "^0.2.13",
