--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-camera": "^0.9.0",
     "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-gridview": "^0.1.1",
     "react-native-image-picker": "^0.26.3",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker": "^4.0.18",
