--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-camera": "^0.9.0",
     "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-grid-view": "^0.4.1",
     "react-native-gridview": "^0.1.1",
     "react-native-image-picker": "^0.26.3",
     "react-native-parallax-scroll-view": "^0.19.0",
@@ -27,6 +28,7 @@
     "react-native-svg": "^5.1.8",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-text-input-wrapper": "^1.1.2",
+    "react-native-toolbar-wrapper": "^1.0.0",
     "react-native-vector-icons": "^4.1.1",
     "react-native-viewpager": "^0.2.13",
     "react-redux": "^5.0.5",
