--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker": "^4.0.18",
     "react-native-popover": "github:jeanregisser/react-native-popover#8a443d2699b404d55c324edc8536255150340789",
+    "react-native-popup-dialog": "^0.7.29",
     "react-native-scrollable-tab-view": "^0.6.6",
     "react-native-sensitive-info": "^5.1.0",
     "react-native-shadow": "^1.1.0",
