--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-actionsheet": "^2.1.0",
-    "react-native-baidu-map": "^0.6.0",
+    "react-native-baidu-map": "^0.5.1",
     "react-native-camera": "^0.9.0",
     "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
@@ -32,6 +32,7 @@
     "react-native-toolbar-wrapper": "^1.1.5",
     "react-native-vector-icons": "^4.1.1",
     "react-native-viewpager": "^0.2.13",
+    "react-native-wechat": "^1.9.5",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
