--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,6 +46,16 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+          <intent-filter>
+              <action android:name="android.intent.action.VIEW"></action>
+              <category android:name="android.intent.category.DEFAULT"></category>
+              <category android:name="android.intent.category.BROWSABLE"></category>
+              <data
+                  android:scheme="app"
+                  android:host="test">
+              </data>
+          </intent-filter>
+
       </activity>
 
         <activity
