--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,7 +90,7 @@ android {
         applicationId "com.sportsapp"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 10
+        versionCode 20
         versionName "1.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -126,7 +126,8 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-svg')
+    compile project(':jpush-react-native')
+    compile project(':jcore-react-native')
     compile project(':react-native-image-picker')
     compile project(':react-native-camera')
     compile project(':react-native-sensitive-info')
