--- a/package.json
+++ b/package.json
@@ -3,25 +3,31 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "configureJPush": "node node_modules/jpush-react-native/JPushConfiguration.js",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "jcore-react-native": "^1.2.2",
+    "jpush-react-native": "^2.1.3",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-actionsheet": "^2.1.0",
     "react-native-baidu-map": "^0.5.1",
     "react-native-camera": "^0.9.0",
+    "react-native-check-box": "^2.0.2",
     "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-grid-view": "^0.4.1",
     "react-native-gridview": "^0.1.1",
     "react-native-image-picker": "^0.26.3",
+    "react-native-multi-select": "^0.1.1",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker": "^4.0.18",
     "react-native-popover": "github:jeanregisser/react-native-popover#8a443d2699b404d55c324edc8536255150340789",
     "react-native-popup-dialog": "^0.7.29",
+    "react-native-qrcode": "^0.2.6",
     "react-native-scrollable-tab-view": "^0.6.6",
     "react-native-sensitive-info": "^5.1.0",
     "react-native-simple-markdown": "^1.0.60-rc.3",
