--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fetch-blob')
+    compile project(':react-native-video')
     compile project(':jpush-react-native')
     compile project(':jcore-react-native')
     compile project(':react-native-image-picker')
@@ -135,9 +137,13 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-baidu-map')
     compile project(':RCTWeChat')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.qiniu:happy-dns:0.2.7'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
+    compile files('src/main/libs/pldroid-media-streaming-2.2.1.jar')
 }
 
 // Run this once to be able to run the application with BUCK
