--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-check-box": "^2.0.2",
     "react-native-datepicker": "^1.5.1",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-grid-view": "^0.4.1",
     "react-native-gridview": "^0.1.1",
     "react-native-image-picker": "^0.26.3",
@@ -35,6 +36,7 @@
     "react-native-text-input-wrapper": "^1.1.3",
     "react-native-toolbar-wrapper": "^1.1.5",
     "react-native-vector-icons": "^4.1.1",
+    "react-native-video": "^2.0.0",
     "react-native-viewpager": "^0.2.13",
     "react-native-wechat": "^1.9.5",
     "react-redux": "^5.0.5",
